agrocd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: farag3
spec:
  finalizers:
  - kubernetes
