agrocd/neymar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: neymar
    env: brazil
  name: neymar
  namespace: farag3
spec:
  replicas: 2
  selector:
    matchLabels:
      app: neymar
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        env: brazil
        app: neymar
    spec:
      containers:
      - image: quay.io/ralvares/ocp:neymar
        name: neymar
        resources: {}
status: {}
