agrocd/example2-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: example2
 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: hello-openshift
