agrocd/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  namespace: farag3
  labels:
    app: neymar
  name: neymar
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: neymar
    weight: 100
