agrocd/router-example2.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  namespace: farag3
  labels:
    app: hello-openshift2
  name: hello-openshift2
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: example2
    weight: 100
